Changes file for {{$dist->name}}

{{$NEXT}}

1.28      2015-03-23 22:32:27-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Tweak missing directory error detection regex (John Anderson)

1.27      2015-03-22 19:46:53-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Add some safety code to prevent mux from opening errything (John Anderson)
  * Add '-e' flag to 'tmux' subcommand [#41] (John Anderson)

1.26      2015-03-18 22:04:39-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Lock Moo to version 2 or greater (John Anderson)
  * Report Git version being used in test suite (John Anderson)

1.25      2015-03-17 20:51:55-07:00 America/Los_Angeles

  * Fix failing tests. (Thanks Travis CI!) (John Anderson)

1.24      2015-03-16 16:56:55-07:00 America/Los_Angeles

  * Update copyright to 2015 (John Anderson)
  * Lock Net::GitHub to at least v0.74 [#47] (John Anderson)
  * Various testing improvements (John Anderson)
  * Turn off IO::Page in 'got all' (John Anderson)
  * Get rid of Term::Readline in favor of IO::Prompt::Simple (John Anderson)
  * Move towards using Path::Tiny for errything (John Anderson)
  * Whitespace cleanup (John Anderson)
  * Clean up 'use' stanzas (John Anderson)
  * delete 'version' command [#48] (John Anderson)

1.23      2015-03-15 01:50:42-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Port to Moo (John Anderson)
  * Silence warning if PERL5LIB is not defined (Yanick Champoux)
  * Specify minimum version on List::AllUtils (John Anderson)

1.22      2015-02-26 07:40:05-08:00 America/Los_Angeles

  * Really fixed test failures (John Anderson)

1.21      2015-02-24 19:15:58-08:00 America/Los_Angeles

  * Fixed test failures (John Anderson)

1.20      2015-02-23 17:51:14-08:00 America/Los_Angeles

  * Add 'lib' subcommand (Yanick Champoux)
  * Add 'tag' subcommand (Yanick Champoux)
  * Add 'do' subcommand (Yanick Champoux)
  * Add '--json' option to 'got list' (Yanick Champoux)
  * Extend the 'add' subcommand in a number of ways: